Spacing Issue

--- a/css/references.css
+++ b/css/references.css
@@ -13,6 +13,7 @@
 }
 
 .container1 {
+  transform: translate(-50%, -50%);
   text-align: center;
   position: absolute;
   left: 50%;
@@ -33,6 +34,7 @@
 }
 
 .container2{
+  transform: translate(-50%, -50%);
   text-align: center;
   position: absolute;
   left: 50%;
@@ -69,7 +71,7 @@
 .img4 {
   background-repeat: no-repeat;
   position: absolute;
-  top: 1000px;
+  top: 1125px;
   opacity: 0.6;
   width: 100%;
   height: 300px;
